[package]
name = "ardop-interface"
version = "0.1.0"
authors = ["Colin S <3526918+cbs228@users.noreply.github.com>"]
edition = "2018"

[dependencies]
enum_derive = "^0.1.7"
custom_derive = "^0.1.7"
nom = "^4.2.3"
chrono = "^0.4.6"
bytes = "^0.4.12"
romio = "=0.3.0-alpha.5"
futures-preview = "=0.3.0-alpha.14"
