[package]
name = "ardop_interface"
version = "0.1.0"
authors = ["Colin S <3526918+cbs228@users.noreply.github.com>"]
edition = "2018"

[dependencies]
enum_derive = "^0.1.7"
custom_derive = "^0.1.7"
log = "^0.4.6"
nom = "^4.2.3"
num = "^0.2.0"
bytes = "^0.4.12"
futures-preview = "^0.3.0-alpha"
runtime = "^0.3.0-alpha"

[dependencies.async-timer]
git = 'https://github.com/DoumanAsh/async-timer.git'
rev = '8420451f'
features = ['romio_on']
