[package]
name = "ardop_interface"
version = "0.1.0-alpha.1"
authors = ["Colin S <3526918+cbs228@users.noreply.github.com>"]
edition = "2018"
description = "Interface to the Amateur Radio Digital Open Protocol (ARDOP)"
license = "MIT OR Apache-2.0"
categories = ["asynchronous", "api-bindings", "network-programming"]
keywords = ["ardop", "amateur-radio", "ham", "modem"]
homepage = "https://github.com/cbs228/ardop_interface"
repository = "https://github.com/cbs228/ardop_interface.git"
readme = "README.md"

[dependencies]
enum_derive = "^0.1.7"
custom_derive = "^0.1.7"
log = "^0.4.6"
nom = "^4.2.3"
num = "^0.2.0"
bytes = "^0.4.12"
futures-preview = "=0.3.0-alpha.17"
futures-timer = "0.2.1"
runtime = ">=0.3.0-alpha.6"

[workspace]
members = [
    "examples/echoclient",
    "examples/echoserver",
    "examples/ping"
]

[badges]
maintenance = {status = "experimental"}
