[package]
name = "ardop-interface-echoserver"
version = "0.1.0"
authors = ["Colin S <3526918+cbs228@users.noreply.github.com>"]
edition = "2018"

[dependencies]
ardop-interface = {path = "../.."}
bytes = "^0.4.12"
clap = "^2.33"
futures-preview = "^0.3.0-alpha"
log = "^0.4.6"
runtime = "^0.3.0-alpha"
stderrlog = "^0.4.1"
