[package]
name = "echoserver"
version = "0.1.0"
authors = ["Colin S <3526918+cbs228@users.noreply.github.com>"]
edition = "2018"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
ardop_interface = {path = "../.."}
async-std = "^1.4.0"
clap = "^2.33"
futures = "^0.3.1"
futures_codec = "^0.3.4"
log = "^0.4.6"
stderrlog = "^0.4.1"
